notifying http mock list when reloading, panel views always scrollable - fixing jumping issue, expression column is self explanatory.

--- a/src/panel/css/panel.css
+++ b/src/panel/css/panel.css
@@ -4,6 +4,11 @@
 }
 
 /****/
+
+html {
+    overflow-y: scroll;
+}
+
 /*  overriding bootstrap styles  */
 .fixed .content-wrapper {
     padding-top: 10px;
